# MigrateX

./: .dockerignore  .gitignore  README.md  docker-compose.yml  run-tests.sh
.github/workflows/: ci.yml
chunking/: Dockerfile  chunk_and_embed.py
docs/latex/: brief.tex
docs/latex/figures/: references.bib
ingestion/: Dockerfile  repo_cloner.py  requirements.txt
irgen/: Dockerfile  generate_ir.py  requirements.txt
post/: Cargo.toml  Dockerfile
post/src/: main.rs
rag/: Dockerfile  retrieve_and_prompt.py
testexec/: Dockerfile  run_tests.sh
testgen/: Dockerfile  generate_tests.py
translate/: Dockerfile  orchestrate_llm.py
